[package]
name = "ssllib-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
chrono = "^0.4.0"
bytes = "^0.5.3"
regex = "1"
sha2 = "^0.10.2"
serde_json = "^1.0.42"
rsa = "^0.6.1"
asn1obj = { path = "../asn1obj/asn1obj"}
asn1obj_codegen = { path = "../asn1obj/asn1obj_codegen"}
