[package]
name = "ssllib-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
chrono = "^0.4.0"
bytes = "^0.5.3"
regex = "1"
sha2 = "^0.10.2"
serde_json = "^1.0.42"
rsa = "^0.6.1"
rand_core = "^0.6.4"
rand = "^0.8.5"
hmac = "^0.12.1"
aes = "0.8.1"
rust-crypto = "^0.2.36"
cbc = "0.1.2"
cfb-mode = "^0.8.1"
asn1obj = { path = "../asn1obj/asn1obj"}
asn1obj_codegen = { path = "../asn1obj/asn1obj_codegen"}



[dependencies.num-bigint]
version = "0.8.1"
features = [
    "i128",
    "u64_digit",
    "prime",
    "zeroize",
]
default-features = false
package = "num-bigint-dig"


